feat: typeorm, transaction 사용

--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,9 @@ EMAIL_SERVICE=Gmail
 EMAIL_AUTH_USER=DEV_EMAIL
 EMAIL_AUTH_PASSWORD=DEV_PASSWORD
 EMAIL_BASE_URL=DEV_URL
+
+DB_HOST=DEV
+DB_PORT=DEV
+DB_USERNAME=DEV
+DB_PASSWORD=DEV
+DB_DATABASE=DEV
