--- a/.env.prod
+++ b/.env.prod
@@ -2,3 +2,9 @@ EMAIL_SERVICE=Gmail
 EMAIL_AUTH_USER=PROD_EMAIL
 EMAIL_AUTH_PASSWORD=PROD_PASSWORD
 EMAIL_BASE_URL=PROD_URL
+
+DB_HOST=PROD
+DB_PORT=PROD
+DB_USERNAME=PROD
+DB_PASSWORD=PROD
+DB_DATABASE=PROD
