--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,9 @@ EMAIL_SERVICE=Gmail
 EMAIL_AUTH_USER=LOCAL_EMAIL
 EMAIL_AUTH_PASSWORD=LOCAL_PASSWORD
 EMAIL_BASE_URL=LOCAL_URL
+
+DB_HOST=LOCAL
+DB_PORT=LOCAL
+DB_USERNAME=LOCAL
+DB_PASSWORD=LOCAL
+DB_DATABASE=LOCAL
