--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.14",
+    "@nestjs/typeorm": "^10.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "joi": "^17.11.0",
+    "mysql2": "^3.6.5",
     "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17",
+    "ulid": "^2.3.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
